--- a/app/views/grabs/new.html.haml
+++ b/app/views/grabs/new.html.haml
@@ -1,7 +1,7 @@
 .hero-unit
   %h1 Let's grab a beer!
   .image= image_tag "jeff.jpg"
-  %p I like drinking beer! I think the best chats are shared over a quick after-work pint. I definitely don't meet with enough people, so I thought making a quick webapp to easily let people schedule a meetup with me would be perfect.
+  %p I think the best chats are shared over a quick after-work pint. I definitely don't do it often enough, so I thought making a quick webapp to easily let people schedule a meetup with me would be perfect.
   %p Whether you're a close friend, an acquaintance, or someone I don't yet know, I'd love to meet up!
   %p I'm usually in San Francisco, but I do travel semi-frequently. Here's the upcoming places I'll be:
   :plain
