cleaner email format

--- a/app/views/grab_mailer/notify_dickeyxxx.html.haml
+++ b/app/views/grab_mailer/notify_dickeyxxx.html.haml
@@ -1,1 +1,5 @@
-= @grab.to_yaml
+%p Topic: #{@grab.topic}
+%p Location: #{@grab.location}
+%p Date: #{@grab.date}
+%p Time: #{@grab.time}
+%p= @grab.comments
