--- a/app/views/grabs/new.html.haml
+++ b/app/views/grabs/new.html.haml
@@ -3,7 +3,7 @@
   .image= image_tag "jeff.jpg"
   %p I think the best chats are shared over a quick after-work pint. I definitely don't do it often enough, so I thought making a quick webapp to easily let people schedule a meetup with me would be perfect.
   %p Whether you're a close friend, an acquaintance, or someone I don't yet know, I'd love to meet up!
-  %p I'm usually in San Francisco, but I do travel semi-frequently. Here's the upcoming places I'll be:
+  %p I'm usually in Santa Monica, but I do travel semi-frequently. Here's the upcoming places I'll be:
   :plain
     <div id="tripit-badge"><script type="text/javascript" src="https://www.tripit.com/account/badge/id/C0F7DE9226DBF186520860F912FE5CDE/div_id/tripit-badge/badge.js"></script><noscript><a href="/">TripIt - Organize your travel</a></noscript></div>
   %br/
