updated bars for santa monica

--- a/app/views/grabs/new.html.haml
+++ b/app/views/grabs/new.html.haml
@@ -20,7 +20,7 @@
         = f.label :date
         = f.text_field :date, class: 'datepicker'
         = f.label :location
-        = f.select :location, [ "The Black Horse", "The Chieftain", "The Sutter Gutter", "City Beer Store", "Anywhere", "Other" ]
+        = f.select :location, [ "Library Alehouse", "Commons Alehouse", "West 4th and Jane", "The Daily Pint", "Other" ]
         = f.label :time
         = f.select :time, [ "6:00", "7:00", "8:00", "9:00" ]
         = f.label :topic
